<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_status_default"
        android:icon="@drawable/referral_default"
        android:orderInCategory="100"
        android:title="@string/item_new_referral_txt"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_status_accepted"
        android:icon="@drawable/referral_accepted"
        android:orderInCategory="100"
        android:title="@string/item_incoming_referral_txt"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_referral_bounced"
        android:icon="@drawable/referral_bounced"
        android:orderInCategory="100"
        android:title="@string/item_outgoing_referral_txt"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_referral_forwarded"
        android:icon="@drawable/referral_forward"
        android:orderInCategory="100"
        android:title="@string/item_outgoing_referral_txt"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_referral_rejected"
        android:icon="@drawable/referral_rejected"
        android:orderInCategory="100"
        android:title="@string/item_outgoing_referral_txt"
        app:showAsAction="always" />
</menu>