
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fe.activity.PhysicianHomeActivity"
    android:gravity="fill_horizontal"
    android:layout_width="match_parent">

    <item
        android:id="@+id/item_new_referral"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_new_referral_off"
        android:title="@string/item_new_referral_txt"
        app:showAsAction="always|withText"
        android:onClick="newReferralClicked"
        android:layout_weight="1.0"

        />

    <item
        android:id="@+id/item_incoming_referral"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_incoming_referral_off"
        android:title="@string/item_incoming_referral_txt"
        app:showAsAction="always|withText"
        android:onClick="incomingReferralClicked"
        android:layout_weight="1.0"
        />

    <item
        android:id="@+id/item_outgoing_referral"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_outgoing_referral_off"
        android:title="@string/item_outgoing_referral_txt"
        app:showAsAction="always|withText"
        android:onClick="outgoingReferralClicked"
        android:layout_weight="1.0"
        />



</menu>