<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".fe.activity.fragment.NewReferralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

  >




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/referringtolabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_weight="0.02"
                android:text="@string/referring_to_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/physician_img_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:background="@drawable/back_blue"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/img_selected_physician"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:contentDescription="@string/current_physician"
                    android:maxHeight="30dp"
                    android:maxWidth="30dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/physicianNameSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:hint="@string/physician_name"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>




            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<TextView-->
                <!--android:id="@+id/searchInfoLabel"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingBottom="@dimen/form_widget_margin"-->
                <!--android:text="@string/newReferralSearchInfoLabel"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
                <!-- -->
                <org.lucasr.twowayview.TwoWayView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/recentReferralListView"
                    style="@style/TwoWayView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:drawSelectorOnTop="false"
                    android:descendantFocusability="blocksDescendants"/>

                <!--<ListView-->
                <!--android:id="@+id/recentReferralListView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="88dp"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:animateLayoutChanges="true"-->
                <!--android:cacheColorHint="@android:color/transparent"-->
                <!--android:divider="#00000000"-->
                <!--android:dividerHeight="2dp"-->
                <!--android:fadingEdgeLength="20dp"-->
                <!--android:listSelector="@android:color/transparent"-->
                <!--android:overScrollMode="never"-->
                <!--android:requiresFadingEdge="vertical"-->
                <!--android:scrollbars="none" />-->

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/patientInfoLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical"
                    android:text="Patient Info:"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sendReferralButton"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="Send"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/patient_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_widget_margin"
                android:layout_weight="0.01"
                android:background="@drawable/back_blue"
                android:hint="Name"
                android:padding="@dimen/form_text_padding"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/patient_phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_widget_margin"
                android:layout_weight="0.01"
                android:background="@drawable/back_blue"
                android:hint="Phone Number"
                android:inputType="phone"
                android:padding="@dimen/form_text_padding"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/patient_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_widget_margin"
                android:layout_weight="0.01"
                android:background="@drawable/back_blue"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/form_text_padding"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/patient_notes_text"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginBottom="@dimen/form_widget_margin"
                android:layout_weight="0.01"
                android:background="@drawable/back_blue"
                android:gravity="top"
                android:hint="Reason/Dx/Notes"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="@dimen/form_text_padding"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>


